--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -67,7 +67,11 @@
 						dataType: "json",
 						data: data
 					}).done(function(responseText) {
-						console.log(responseText)
+						if(responseText.success){
+							location.href = '../my';
+						}else{
+							alert(responseText.msg);
+						}
 					}).complete(function(){
 					});
 				});
