--- a/web/views/manage/manager/Index.html
+++ b/web/views/manage/manager/Index.html
@@ -90,13 +90,13 @@
 					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="addFrm_UserName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>用户名称</label>
+								<label for="addFrm_UserName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>用户名</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="addFrm_UserName" name="UserName" placeholder="用户名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="addFrm_UserName" name="UserName" placeholder="用户名" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="addFrm_Sex" class="col-sm-3 control-label"><span class="olx-form-required">*</span>性别</label>
+								<label for="addFrm_Sex" class="col-sm-3 control-label">性别</label>
 								<div class="col-sm-7">
 									<select class="form-control" id="addFrm_Sex" name='sex'>
 										<option value="1">男</option>
@@ -138,13 +138,13 @@
 						<input type="hidden" id="editFrm_Id" name="Id" value="0">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="editFrm_UserName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>用户名称</label>
+								<label for="editFrm_UserName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>用户名</label>
 								<div class="col-sm-7">
-									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="editFrm_UserName" name="UserName" placeholder="用户名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+									<input type="text" data-olx-type="olx.form.input" data-required="true" class="form-control" id="editFrm_UserName" name="UserName" placeholder="用户名" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="editFrm_Sex" class="col-sm-3 control-label"><span class="olx-form-required">*</span>性别</label>
+								<label for="editFrm_Sex" class="col-sm-3 control-label">性别</label>
 								<div class="col-sm-7">
 									<select class="form-control" id="editFrm_Sex" name='sex'>
 										<option value="1">男</option>
