--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -23,7 +23,7 @@
                     <form id="loginForm" role="form" onsubmit="return false;">
                         <h3>请登陆</h3>
                         <div class="form-group">
-                            <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名">
+                            <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名/电子邮箱">
                         </div>
                         <div class="form-group">
                             <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码">
@@ -34,7 +34,7 @@
                             </label>
                         </div>
                         <button id="btn_login" type="button" class="btn btn-primary">登陆</button>
-                        <button type="button" class="btn btn-danger" onclick="location.href='register'">注册</button>
+                        <a class="btn btn-danger" href="register">注册</a>
                     </form>                
                 </div>
 		    </div>
