--- a/web/views/500.html
+++ b/web/views/500.html
@@ -14,23 +14,19 @@
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
-
 		<header id="header"></header>
 
 		<section class="container">
 		    <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>500</h1>
-                    <h2>服务器内部错误 ${url}</h2>
+                    <h2>服务器内部错误 ${msg}</h2>
                 </div>
 		    </div>
 		</section>
 
         #parse('pagelet/IndexFooter.html')
-
         #parse('pagelet/IndexJs.html')
-
 		<!-- Own -->
-
 	</body>
 </html>
