--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -20,19 +20,19 @@
 		<section class="container">
 		    <div class="row">		    
                 <div class="col-md-3 col-sm-4">
-                    <form id="regForm" role="form" onsubmit="return false;">
+                    <form id="regFrm" role="form" onsubmit="return false;">
 						<h3>新用户注册</h3>
 						<div class="form-group">
-							<input type="text" id="regForm_UserName" name="UserName" class="form-control" placeholder="用户名">
+							<input type="text" id="regFrm_UserName" name="UserName" class="form-control" placeholder="用户名">
 						</div>
 						<div class="form-group">
-							<input type="text" id="regForm_Email" name="Email" class="form-control" placeholder="电子邮箱">
+							<input type="text" id="regFrm_Email" name="Email" class="form-control" placeholder="电子邮箱">
 						</div>
 						<div class="form-group">
-							<input type="password" id="regForm_UserPass" name="UserPass" class="form-control" placeholder="密码">
+							<input type="password" id="regFrm_UserPass" name="UserPass" class="form-control" placeholder="密码">
 						</div>
 						<div class="form-group">
-							<input type="password" id="regForm_UserPass2" class="form-control" placeholder="密码确认">
+							<input type="password" id="regFrm_UserPass2" class="form-control" placeholder="密码确认">
 						</div>
                         <button id="btn_reg" type="button" class="btn btn-primary">注册</button>
                         <a class="btn btn-danger" href="login">登陆</a>
@@ -44,19 +44,17 @@
         #parse('pagelet/IndexFooter.html')
 
         #parse('pagelet/IndexJs.html')
+        <script type="text/javascript">var exports = {};</script>
+		<script type="text/javascript" src="../public/user/userRegFrm.js" lang='utf-8'></script>
 
 		<!-- Own -->
 		<script type="text/javascript">
-			function validateForm(){
-				var formObj = $("#regForm").serializeObjectForm();
-				return formObj;
-			}
-
 			$(function(){
 				$('#btn_reg').click(function(){
-					var formObj = validateForm();
-					if(!formObj){
-						alert('表单验证失败')
+					var formObj = $("#regFrm").serializeObjectForm();
+					var valiResu = valiUserRegFrm(formObj);
+					if(valiResu){
+						alert(valiResu[0]);
 						return;
 					}
 
@@ -69,9 +67,9 @@
 						data: data
 					}).done(function(responseText) {
 						if(responseText.success){
-							location.href = $('#regForm_UserName').val() +'/sendRegEmail';
+							location.href = $('#regFrm_UserName').val() +'/sendRegEmail';
 						}else{
-							alert(responseText.msg);
+							alert(responseText.msg[0]);
 						}
 					}).complete(function(){
 					});
