--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -27,25 +27,25 @@
                     <form id="regFrm" role="form" onsubmit="return false;">
 						<h3>新用户注册</h3>
 						<div class="form-group">
-							<label id='lab_regFrm_UserName' for="regFrm_UserName">用户名不能为空</label>
+							<label id='lab_regFrm_UserName' for="regFrm_UserName"></label>
 						</div>
 						<div class="form-group">
 							<input type="text" id="regFrm_UserName" name="UserName" class="form-control" placeholder="用户名">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_Email' for="regFrm_Email">电子邮箱不能为空</label>
+							<label id='lab_regFrm_Email' for="regFrm_Email"></label>
 						</div>
 						<div class="form-group">
 							<input type="text" id="regFrm_Email" name="Email" class="form-control" placeholder="电子邮箱">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_UserPass' for='regFrm_UserPass'>密码不能为空</label>
+							<label id='lab_regFrm_UserPass' for='regFrm_UserPass'></label>
 						</div>
 						<div class="form-group">
 							<input type="password" id="regFrm_UserPass" name="UserPass" class="form-control" placeholder="密码">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_UserPass2' for='regFrm_UserPass2'>密码确认不能为空</label>
+							<label id='lab_regFrm_UserPass2' for='regFrm_UserPass2'></label>
 						</div>
 						<div class="form-group">
 							<input type="password" id="regFrm_UserPass2" class="form-control" placeholder="密码确认">
@@ -53,7 +53,7 @@
                         <button id="btn_reg" type="button" class="btn btn-primary">注册</button>
                         <a class="btn btn-danger" href="login">登陆</a>
 						<div class="form-group">
-							<label id='lab_regFrm_all'>提示：密码确认不能为空</label>
+							<label id='lab_regFrm_all'></label>
 						</div>
                     </form>                
                 </div>
