--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -27,31 +27,34 @@
                     <form id="regFrm" role="form" onsubmit="return false;">
 						<h3>新用户注册</h3>
 						<div class="form-group">
-							<label id='lab_regFrm_UserName' for="regFrm_UserName">用户名不能为空</label>
+							<label id='lab_regFrm_UserName' for="regFrm_UserName"></label>
 						</div>
 						<div class="form-group">
 							<input type="text" id="regFrm_UserName" name="UserName" class="form-control" placeholder="用户名">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_Email' for="regFrm_Email">电子邮箱不能为空</label>
+							<label id='lab_regFrm_Email' for="regFrm_Email"></label>
 						</div>
 						<div class="form-group">
 							<input type="text" id="regFrm_Email" name="Email" class="form-control" placeholder="电子邮箱">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_UserPass' for='regFrm_UserPass'>密码不能为空</label>
+							<label id='lab_regFrm_UserPass' for='regFrm_UserPass'></label>
 						</div>
 						<div class="form-group">
 							<input type="password" id="regFrm_UserPass" name="UserPass" class="form-control" placeholder="密码">
 						</div>
 						<div class="form-group">
-							<label id='lab_regFrm_UserPass2' for='regFrm_UserPass2'>密码确认不能为空</label>
+							<label id='lab_regFrm_UserPass2' for='regFrm_UserPass2'></label>
 						</div>
 						<div class="form-group">
 							<input type="password" id="regFrm_UserPass2" class="form-control" placeholder="密码确认">
 						</div>
                         <button id="btn_reg" type="button" class="btn btn-primary">注册</button>
                         <a class="btn btn-danger" href="login">登陆</a>
+						<div class="form-group">
+							<label id='lab_regFrm_all'></label>
+						</div>
                     </form>                
                 </div>
 		    </div>
@@ -65,11 +68,13 @@
 		<!-- Own -->
 		<script type="text/javascript">
 			$(function(){
+				var labs = $("label[id^='lab_regFrm_']");
+
 				$('#btn_reg').click(function(){
 					var formObj = $("#regFrm").serializeObjectForm();
 					var valiResu = valiUserRegFrm(formObj);
 					if(valiResu){
-						$("label[id^='lab_regFrm_']").each(function (i, lab){
+						labs.each(function (i, lab){
 							var _lab = $(lab);
 							if('lab_regFrm_'+ valiResu[1] === lab.id){
 								_lab.css('display', 'block');
@@ -91,9 +96,27 @@
 						data: data
 					}).done(function(responseText) {
 						if(responseText.success){
-							location.href = $('#regFrm_UserName').val() +'/sendRegEmail';
+							location.href = formObj.UserName +'/sendRegEmail';
 						}else{
-							alert(responseText.msg[0]);
+							if(responseText.msg instanceof Array){
+								labs.each(function (i, lab){
+									var _lab = $(lab);
+									if('lab_regFrm_'+ responseText.msg[1] === lab.id){
+										_lab.css('display', 'block');
+										_lab.html(responseText.msg[0]);
+										_lab.focus();
+									}else{
+										_lab.css('display', 'none');
+									}
+								});
+							}else{
+								labs.each(function (i, lab){
+									var _lab = $(lab);
+									_lab.css('display', 'none');
+								});
+								$('#lab_regFrm_all').css('display', 'block');
+								$('#lab_regFrm_all').html('提示：'+ responseText.msg);
+							}
 						}
 					}).complete(function(){
 					});
