--- a/web/views/pagelet/IndexJs.html
+++ b/web/views/pagelet/IndexJs.html
@@ -1,10 +1,10 @@
 <!-- Bootstrap -->
 <script type="text/javascript" src="${cdn}/jquery/2.0.2/jquery.min.js?v2.0.2"></script>
 <script type="text/javascript" src="${cdn}/jquery/ext/jquery.pin.js"></script>
-<script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
 <script type="text/javascript" src="${cdn}/jquery/ext/ext.form.js"></script>
-<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.js?v3.0.3"></script>
-<script type="text/javascript" src="${cdn}/FlexSlider/2.2.2/jquery.flexslider.js" defer></script>
+<script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
+<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.min.js?v3.0.3"></script>
+<script type="text/javascript" src="${cdn}/FlexSlider/2.2.2/jquery.flexslider-min.js" defer></script>
 
 <!-- Olx -->
 <script type="text/javascript" src="${cdn}/olxjs/1.0.0/js/olx.min.js"></script>
