--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -23,7 +23,7 @@
 		<header id="header"></header>
 		<section class="container">
 		    <div class="row">		    
-				<div class="col-md-4 col-sm-5">
+				<div class="col-md-3 col-sm-4">
 					<h3>新用户注册</h3>
 					<div id="alert_info" class="alert alert-warning">
 						<button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -81,7 +81,7 @@
 					}).done(function(responseText) {
 						var msg, lab;
 						if(responseText.success){
-							location.href = formObj.UserName +'/register';
+							location.href = formObj.UserName +'/register/success';
 						}else{
 							msg = responseText.msg;
 							if(msg.message) return $('#alert_msg').html(msg.message);
