--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -52,7 +52,7 @@
         #parse('pagelet/IndexFooter.html')
         #parse('pagelet/IndexJs.html')
         <script type="text/javascript">var exports = {};</script>
-		<script type="text/javascript" src="../public/user/userRegFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="../public/user/regFrm.js" lang='utf-8'></script>
 
 		<!-- Own -->
 		<script type="text/javascript">
@@ -62,7 +62,7 @@
 					var formObj = $("#regFrm").serializeObjectForm();
 					var valiResu = valiUserRegFrm(formObj);
 					if(valiResu){
-						if('string' === valiResu){
+						if('string' === typeof valiResu){
 							$('#alert_msg').html(valiResu);
 						}else{
 							$('#alert_msg').html(valiResu[0]);
