--- a/web/views/manage/Main.html
+++ b/web/views/manage/Main.html
@@ -49,7 +49,7 @@
 			</tr>
 		</table>
 		<iframe id="ifr_mainTabs" frameborder="0" height="100%" width="100%" src=""></iframe>		
-		<div id="div_foot"><span>版权所有：核心科技</span></div>	
+		<div id="div_foot"><span>版权所有：找呗科技</span></div>	
 		<div id="div_tree"></div>
 		<div id="div_center"></div>
 	<!--[if lt IE 10]>
