--- a/web/views/manage/manager/Login.html
+++ b/web/views/manage/manager/Login.html
@@ -8,8 +8,7 @@
 				padding-bottom: 40px;
 				padding-top: 40px;
 			}
-		    #loginForm 
-		    {
+		    #loginFrm {
 				background-color: #FFFFFF;
 				border: 1px solid #E5E5E5;
 				border-radius: 5px;
@@ -18,17 +17,25 @@
 				max-width: 350px;
 				padding: 19px 29px 29px;
 		    }
+		    #alert_info {
+				max-width: 350px;
+				margin: 0 auto 20px;
+		    }
 		</style>
 	</head>
 	<body>
 		<section class="container">
-			<form id="loginForm" role="form" onsubmit="return false;">
+			<div id="alert_info" class="alert alert-warning">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<strong>提示：</strong><span id='alert_msg'>请按要求输入正确的格式内容。</span>
+			</div>
+			<form id="loginFrm" role="form" onsubmit="return false;">
 			    <h3>后台登陆</h3>
 			    <div class="form-group">
-			        <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名" value="admin">
+			        <input id="loginFrm_UserName" name="UserName" type="text" class="form-control" placeholder="用户名" value="admin">
 			    </div>
 			    <div class="form-group">
-			        <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码" value="111111">
+			        <input id="loginFrm_UserPass" name="UserPass" type="password" class="form-control" placeholder="密码" value="111111">
 			    </div>
 			    <div class="checkbox">
 			        <label>
@@ -40,41 +47,40 @@
 		</section>
 
         #parse('pagelet/IndexJs.html')
+		<script type="text/javascript">var exports = {};</script>
+		<script type="text/javascript" src="../../public/manage/manager/loginFrm.js" lang='utf-8'></script>
 
 		<!-- Own -->
 		<script type="text/javascript">
 			if(window.top !== window.self) top.location.href = '/manage/manager/login';
 
-			function validateForm(){
-				var formObj = $("#loginForm").serializeObjectForm();
-				if(0 === formObj.UserName.length) return;
-				if(0 === formObj.UserPass.length) return;
-				return formObj;
+			function frmDeal(valiResu){
+				if('string' === typeof valiResu){
+					$('#alert_msg').html(valiResu);
+				}else{
+					$('#alert_msg').html(valiResu[0]);
+					$('#loginFrm_'+ valiResu[1]).focus();
+				}
 			}
 
 			$(function(){
 				$('#btn_login').click(function(){
-					var formObj = validateForm();
-					if(!formObj){
-						alert('表单验证失败')
-						return;
-					}
-
-					var data = { data: JSON.stringify(formObj) };
+					var formObj = $("#loginFrm").serializeObjectForm();
+					var valiResu = valiLoginFrm(formObj);
+					if(valiResu) return frmDeal(valiResu);
 
 					$.ajax({
-						url: '/manage/manager/login.do',
+						url: '/manage/manager/login',
 						type: "POST",
 						dataType: "json",
-						data: data
-					}).done(function(responseText) {
-						if(responseText.success){
-							location.href = "../index?locale="+ (location.search.match(/locale=([\w\-]+)/) ? RegExp.$1 : "zh") +"#page/welcome";
-						}else{
-							alert(responseText.msg);
+						data: {
+							data: JSON.stringify(formObj)
 						}
-					}).complete(function(){
-					});
+					}).done(function(data){
+						console.log(data);
+						if(!data.success) return frmDeal(data.msg);
+						location.href = '../index?locale='+ (location.search.match(/locale=([\w\-]+)/) ? RegExp.$1 : 'zh') +'#page/welcome';
+					}).complete(function(){ });
 				});
 			});
 		</script>
