--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -91,7 +91,7 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="addModalLabel" class="modal-title"><b>新增</b></h4>
 					</div>
-					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
+					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add">
 						<input type="hidden" id="addFrm_PId" name="PId" value="0">
 						<div class="modal-body">
 							<div class="form-group">
@@ -141,7 +141,7 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="editModalLabel" class="modal-title"><b>编辑</b></h4>
 					</div>
-					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
+					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit">
 						<input type="hidden" id="editFrm_Id" name="Id" value="0">
 						<div class="modal-body">
 							<div class="form-group">
@@ -244,157 +244,12 @@
 		<script type="text/javascript" src="${cdn}/bootstrap-datetimepicker/2.2.0/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap-datetimepicker/2.2.0/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
 
+		<script type="text/javascript">var exports = {};</script>
+		<script type="text/javascript" src="${virtualPath}public/manage/module/addFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="${virtualPath}public/manage/module/editFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="${virtualPath}public/manage/module/delFrm.js" lang='utf-8'></script>
+		<script type="text/javascript">var modules = [${modules}];</script>
 		<!-- Own -->
-		<script type="text/javascript">
-			$('.form_date').datetimepicker({
-				language:  'zh-CN',
-				weekStart: 1,
-				todayBtn:  1,
-				autoclose: 1,
-				todayHighlight: 1,
-				startView: 2,
-				minView: 2,
-				forceParse: 0
-			});
-
-			function dblClickExpand(treeId, treeNode) {
-				return treeNode.level > 0;
-			}
-
-			var setting = {
-				view: {
-					dblClickExpand: dblClickExpand
-				},
-				data: {
-					simpleData: {
-						enable: true
-					}
-				},
-				callback: {
-					beforeClick: function(treeId, treeNode) {
-						var pid = treeNode.id;
-						$('#addFrm_PId').val(pid);
-
-						$("#table1").data('url', ['/manage/module/', pid, '/children'].join('')).olxGrid("loadData", [null, function(data){
-							if(300 === data.responseJSON.code){
-								top.location.href = '/manage/user/login';
-							}
-						}]);
-					}
-				}
-			};
-
-			var modules = [${modules}];
-
-			for(var i=0; i<modules.length; i++){
-				var module = modules[i];
-				module.id = module.Id;
-				module.pId = module.PId;
-				module.name = module.ModuleName;
-				module.file = module.ModuleUrl;
-				module.open = true;
-			}
-
-			modules.push({
-				id: '0',
-				pid: 'root',
-				name: '根 Root',
-				open: true
-			});
-
-			$(function(){
-				$.fn.zTree.init($("#modTree"), setting, modules);
-			});
-
-			$("#btn_edit").click(function(){
-				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(1 !== vals.length) return $("#editAlertModal").modal();
-
-				$.ajax({
-					url: vals[0],
-					type: "GET",
-					dataType: "json"
-				}).done(function(responseText) {
-					if(300 === responseText.code) return top.location.href = '/manage/user/login';
-					if(!responseText.success) return alert(responseText.msg);
-
-					$("#editModal").modal();
-
-					var data = responseText.data;
-					$('#editFrm_Id').val(vals[0]);
-					$('#editFrm_ModuleName').val(data[0].ModuleName);
-					$('#editFrm_ModuleUrl').val(data[0].ModuleUrl);
-					$('#editFrm_Sort').val(data[0].Sort);
-					$('#editFrm_CreateTime').val(data[1].CreateTime);
-					$('#editFrm_shadow_CreateTime').val(data[1].CreateTime);
-				});
-			});
-
-			$("#delConfirmModal").on("show.bs.modal", function (e) {
-				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(!vals.length) {
-					$("#delAlertModal").modal();
-					return e.preventDefault();
-				}
-			})
-
-			/* 绑定删除按钮，弹出提示对话框或确认对话框 */
-			$("#btn_del").click(function(){
-				$("#delConfirmModal").modal();
-			});
-
-			$('#addFrm_btn_submit').click(function(){
-				$('#addFrm').olxForm('submit', function(responseText){
-					if(responseText.code){
-						if(300 === responseText.code){
-							top.location.href = '/manage/user/login';
-							return;
-						}
-					}
-
-					if(responseText.success){
-						location.reload();
-					}else{
-						alert(responseText.msg);
-					}
-				});
-			});
-
-			$('#editFrm_btn_submit').click(function(){
-				$('#editFrm').olxForm('submit', function(responseText){
-					if(responseText.code){
-						if(300 === responseText.code){
-							top.location.href = '/manage/user/login';
-							return;
-						}
-					}
-
-					if(responseText.success){
-						location.reload();
-					}else{
-						alert(responseText.msg);
-					}
-				});
-			});
-
-			$('#delConfirmModal_btn_submit').click(function(){
-				var selIds = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(!selIds.length) return;
-
-				$.ajax({
-					url: 'del.do',
-					type: "POST",
-					dataType: "json",
-					data: {
-						data: JSON.stringify({ Ids: selIds })
-					}
-				}).done(function(responseText) {
-					if(300 === responseText.code) return top.location.href = '/manage/user/login';
-					if(!responseText.success) return alert(responseText.msg);
-					location.reload();
-				}).complete(function(){
-				});
-			});
-		</script>
+		<script type="text/javascript" src="${virtualPath}public/manage/module/index.js" lang='utf-8'></script>
 	</body>
 </html>
