--- a/web/views/manage/role/Index.html
+++ b/web/views/manage/role/Index.html
@@ -74,7 +74,7 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="addModalLabel" class="modal-title"><b>新增</b></h4>
 					</div>
-					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add.do">
+					<form id="addFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="add">
 						<div class="modal-body">
 							<div class="form-group">
 								<label for="addFrm_RoleName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>角色名称</label>
@@ -139,7 +139,7 @@
 						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
 						<h4 id="editModalLabel" class="modal-title"><b>编辑</b></h4>
 					</div>
-					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
+					<form id="editFrm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit">
 						<input type="hidden" id="editFrm_Id" name="Id" value="0">
 						<div class="modal-body">
 							<div class="form-group">
@@ -253,115 +253,15 @@
 		<script type="text/javascript" src="${cdn}/jquery/2.0.2/jquery.min.js"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
-		<script type="text/javascript" src="${cdn}/olxjs/1.0.0/js/olx.js?v12"></script>
+		<script type="text/javascript" src="${cdn}/olxjs/1.0.0/js/olx.min.js?v12"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap-datetimepicker/2.2.0/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap-datetimepicker/2.2.0/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
 
+		<script type="text/javascript">var exports = {};</script>
+		<script type="text/javascript" src="${virtualPath}public/manage/role/addFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="${virtualPath}public/manage/role/editFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="${virtualPath}public/manage/role/delFrm.js" lang='utf-8'></script>
 		<!-- Own -->
-		<script type="text/javascript">
-			$('.form_date').datetimepicker({
-				language:  'zh-CN',
-				weekStart: 1,
-				todayBtn:  1,
-				autoclose: 1,
-				todayHighlight: 1,
-				startView: 2,
-				minView: 2,
-				forceParse: 0
-			});
-
-			$(function(){
-			});
-
-			$('#addFrm_btn_submit').click(function(){
-				$('#addFrm').olxForm('submit', function(responseText){
-					if(responseText.code){
-						if(300 === responseText.code){
-							top.location.href = '/manage/user/login';
-							return;
-						}
-					}
-
-					if(responseText.success){
-						location.reload();
-					}else{
-						alert(responseText.msg);
-					}
-				});
-			});
-
-			$("#btn_edit").click(function(){
-				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(1 !== vals.length) return $("#editAlertModal").modal();
-
-				$.ajax({
-					url: vals[0] +'.do',
-					type: "GET",
-					dataType: "json"
-				}).done(function(responseText) {
-					if(300 === responseText.code) return top.location.href = '/manage/user/login';
-					if(!responseText.success) return alert(responseText.msg);
-
-					$("#editModal").modal();
-
-					var data = responseText.data;
-					$('#editFrm_Id').val(vals[0]);
-					$('#editFrm_RoleName').val(data[0].RoleName);
-					$('#editFrm_RoleDesc').val(data[0].RoleDesc);
-					$('#editFrm_shadow_StartTime').val(data[1].StartTime);
-					$('#editFrm_shadow_EndTime').val(data[1].EndTime);
-					$('#editFrm_shadow_CreateTime').val(data[1].CreateTime);
-				});
-			});
-
-			$("#delConfirmModal").on("show.bs.modal", function (e) {
-				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(!vals.length) {
-					$("#delAlertModal").modal();
-					return e.preventDefault();
-				}
-			})
-
-			/* 绑定删除按钮，弹出提示对话框或确认对话框 */
-			$("#btn_del").click(function(){
-				$("#delConfirmModal").modal();
-			});
-
-			$('#delConfirmModal_btn_submit').click(function(){
-				var selIds = $("#table1").olxGrid("getCheckedRowsValue", 1);
-				if(!selIds.length) return;
-
-				$.ajax({
-					url: 'del.do',
-					type: "POST",
-					dataType: "json",
-					data: {
-						data: JSON.stringify({ Ids: selIds })
-					}
-				}).done(function(responseText) {
-					if(300 === responseText.code) return top.location.href = '/manage/user/login';
-					if(!responseText.success) return alert(responseText.msg);
-					location.reload();
-				}).complete(function(){
-				});
-			});
-
-			$('#editFrm_btn_submit').click(function(){
-				$('#editFrm').olxForm('submit', function(responseText){
-					if(responseText.code){
-						if(300 === responseText.code){
-							top.location.href = '/manage/user/login';
-							return;
-						}
-					}
-
-					if(responseText.success){
-						location.reload();
-					}else{
-						alert(responseText.msg);
-					}
-				});
-			});
-		</script>
+		<script type="text/javascript" src="${virtualPath}public/manage/role/index.js" lang='utf-8'></script>
 	</body>
 </html>
